# simple-to-do-flask

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py  auth.py  db.py  schema.sql  task.py
app/static/: kanban.js  style.css  theme.js
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/task/: create.html  index.html  update.html
instance/: app.sqlite
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_task_app.py
