[project]
name = "to-dos"
version = "1.0.0"
description = "A simple to-do app"
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "app"

[project.scripts]
to-dos = "app:create_app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]